--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .parallax-container {
-	height: 24%;
+	min-height: 30%;
 }
 
 .parallax img {
@@ -27,11 +27,15 @@ section, footer {
 	padding: 20px 0;
 }
 
-.sidenav {
-	width: 30%;
+.logo {
+	min-width: 500px;
+}
+
+/* .sidenav {
+	width: 30px;
 }
 
 .brand-logo {
 	text-align: center;
 }
-
+ */
